# AI-class-stuff

AI5/include/: agent.hpp  environment.hpp
AI5/src/: agent.cpp  environment.cpp  main.cpp
Breadth-First Search and Depth-First Search/: readme.md
Breadth-First Search and Depth-First Search/src/include/: agent.hpp  environment.hpp
Breadth-First Search and Depth-First Search/src/src/: agent.cpp  environment.cpp  main.cpp
Connect 4, minmax, alpha-beta pruning/: members
Connect 4, minmax, alpha-beta pruning/src/assignment_10/: .cproject  CMakeLists.txt
Connect 4, minmax, alpha-beta pruning/src/assignment_10/example/: assignment10
Connect 4, minmax, alpha-beta pruning/src/assignment_10/include/: GameBoard.hpp  Players.hpp
Connect 4, minmax, alpha-beta pruning/src/assignment_10/src/: GameBoard.cpp  Players.cpp  main.cpp
Delivery Robot/src/assignment_09/: .cproject  .project
Delivery Robot/src/assignment_09/include/: agent.hpp  environment.hpp
Delivery Robot/src/assignment_09/src/: agent.cpp  (+2 more)
Greedy and A-star Search/: readme.md
Greedy and A-star Search/src/include/: agent.hpp  environment.hpp
Greedy and A-star Search/src/src/: agent.cpp  environment.cpp  main.cpp
The Traveling Salesman with Hill Climbing/src/include/: agent.hpp  world.hpp
The Traveling Salesman with Hill Climbing/src/src/: agent.cpp  main.cpp
The Traveling Salesman with Simulated Annealing/src/: CMakeLists.txt
The Traveling Salesman with Simulated Annealing/src/include/: agent.hpp
The Traveling Salesman with Simulated Annealing/src/src/: agent.cpp  main.cpp  world.cpp
